--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,7 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
-<body>
-    <div style="display: flex;flex-direction: row;justify-content: center;">
-        <div><h1 style="align-self: center;">Attendance management system</h1></div>
-    
-    </div>
 
+    {%extends 'base.html'%}
+    {%block content%}
+    
     <br>
     <div class = "a" style = "display:flex;justify-content: center;padding-top: 20px;">
         <div class = "b" >
@@ -22,13 +15,15 @@
             <tbody>
                 {%for i in messages%}
                 <tr>
-                    <td>{{i[0]}}</td>
-                    <td>{{i[1]}}</td>
+                    <td>{{i['data']}}</td>
+                    <td>{{i['time']}}</td>
                 </tr>
                 {%endfor%}
             </tbody>
         </table>
+        <form action="/deleteAll" method="post">
+            <input type="submit" value="Delete All Records">
+        </form>
     </div>
     </div> 
-</body>
-</html>
+    {%endblock%}
