--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,14 @@
 {%extends 'base.html'%}
 {%block content%}
-<form action="/login">
+<form action="" method="POST">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">username</label>
-      <input type="username" class="form-control" id="exampleInputusername" aria-describedby="emailHelp">
+      <input name="username" type="username" class="form-control" id="exampleInputusername" aria-describedby="emailHelp">
       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+      <input name = "password" type="password" class="form-control" id="exampleInputPassword1">
     </div>
     <div class="mb-3 form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
