refactor: Remove commented out code and unused imports in API.py

--- a/templates/create_class.html
+++ b/templates/create_class.html
@@ -5,4 +5,4 @@
         <input type="text" id="class_name" name="class_name"><br>
         <input type="submit" value="Create Class">
     </form>
-{%block content%}
+{%endblock%}
