--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{{url_for('view_profile')}}">view profile</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{url_for('view_attendance')}}">view attendance</a>
+                    </li>
 
                 {% endif %}
             </ul>
